Use Stream.toList in the message resolver test
Resolves Sonar rule java:S6204; the list is only read afterwards, so the immutable variant is safe.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>